--- a/pom.xml
+++ b/pom.xml
@@ -47,7 +47,11 @@
       <url>http://www.apache.org/licenses/LICENSE-2.0</url>
     </license>
   </licenses>
-
+  <scm>
+    <connection>scm:git:git://gitorious.ow2.org/ow2-jasmine/jpaas-frontend-manager.git</connection>
+    <developerConnection>scm:git:git@gitorious.ow2.org:ow2-jasmine/jpaas-frontend-manager.git</developerConnection>
+    <url>http://gitorious.ow2.org/ow2-jasmine/jpaas-frontend-manager/trees/master</url>
+  </scm>
   <modules>
     <module>ejb</module>
   </modules>
