--- a/ejb/pom.xml
+++ b/ejb/pom.xml
@@ -15,7 +15,7 @@
   <parent>
     <groupId>org.ow2.jonas.jpaas</groupId>
     <artifactId>jpaas-frontend-manager</artifactId>
-    <version>1.0.0-M1</version>
+    <version>1.0.0-M2-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
 
