--- a/pom.xml
+++ b/pom.xml
@@ -49,8 +49,8 @@
         </license>
     </licenses>
     <scm>
-        <connection>scm:git:https://florent.benoit@forge.peergreen.com/git/git/jpaas/jpaas-frontend-manager.git</connection>
-        <developerConnection>scm:git:https://florent.benoit@forge.peergreen.com/git/git/jpaas/jpaas-frontend-manager.git</developerConnection>
+        <connection>scm:git:https://forge.peergreen.com/git/git/jpaas/jpaas-frontend-manager.git</connection>
+        <developerConnection>scm:git:https://forge.peergreen.com/git/git/jpaas/jpaas-frontend-manager.git</developerConnection>
         <url>https://forge.peergreen.com/git/summary/?r=jpaas/jpaas-frontend-manager.git</url>
         <tag>HEAD</tag>
     </scm>
