Updated references of jpaas-catalog module to jpaas-catalog-api

--- a/ejb/pom.xml
+++ b/ejb/pom.xml
@@ -54,7 +54,7 @@
         </dependency>
         <dependency>
             <groupId>org.ow2.jonas.jpaas.catalog</groupId>
-            <artifactId>jpaas-catalog</artifactId>
+            <artifactId>jpaas-catalog-api</artifactId>
             <version>${jpaas.catalog.version}</version>
         </dependency>
         <dependency>
