--- a/mock/pom.xml
+++ b/mock/pom.xml
@@ -34,7 +34,7 @@
         </dependency>
         <dependency>
             <groupId>org.ow2.jonas.jpaas.catalog</groupId>
-            <artifactId>jpaas-catalog</artifactId>
+            <artifactId>jpaas-catalog-api</artifactId>
             <version>${jpaas.catalog.version}</version>
         </dependency>
         <dependency>
