--- a/api/pom.xml
+++ b/api/pom.xml
@@ -1,60 +1,15 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<!--
-   Copyright 2012 Bull S.A.S.
-   Licensed under the Apache License, Version 2.0 (the "License");
-   you may not use this file except in compliance with the License.
-   You may obtain a copy of the License at
-       http://www.apache.org/licenses/LICENSE-2.0
-   Unless required by applicable law or agreed to in writing, software
-   distributed under the License is distributed on an "AS IS" BASIS,
-   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
-   See the License for the specific language governing permissions and
-   limitations under the License.
--->
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+  xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <parent>
-    <groupId>org.ow2.jonas.jpaas</groupId>
-    <artifactId>jpaas-frontend-manager</artifactId>
-    <version>1.0.0-M2-SNAPSHOT</version>
+    <groupId>com.peergreen.paas</groupId>
+    <artifactId>paas-frontend-manager</artifactId>
+    <version>1.0.0-M1-SNAPSHOT</version>
   </parent>
   <modelVersion>4.0.0</modelVersion>
-
-  <artifactId>frontend-manager-api</artifactId>
-  <name>JPaaS :: Frontend Manager : API</name>
+  <artifactId>paas-frontend-manager-api</artifactId>
   <packaging>bundle</packaging>
 
-  <description>jPaaS :: Frontend Manager : API</description>
-
-  <dependencies>
-  </dependencies>
-
-  <build>
-    <plugins>
-      <plugin>
-        <groupId>org.apache.maven.plugins</groupId>
-        <artifactId>maven-compiler-plugin</artifactId>
-        <version>2.3.2</version>
-        <configuration>
-          <source>1.6</source>
-          <target>1.6</target>
-        </configuration>
-      </plugin>
-
-      <plugin>
-        <groupId>org.apache.felix</groupId>
-        <artifactId>maven-bundle-plugin</artifactId>
-        <version>2.2.0</version>
-        <extensions>true</extensions>
-        <goals>
-          <goal>bundle</goal>
-        </goals>
-        <configuration>
-          <instructions>
-            <_include>-target/classes/META-INF/${project.artifactId}.bnd</_include>
-          </instructions>
-        </configuration>
-      </plugin>
-    </plugins>
-  </build>
+  <name>PG PaaS :: Frontend Manager :: API</name>
 
 </project>
